[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Objects/Player/Window_parties/Party.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 27
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="Party" type="VBoxContainer"]
margin_right = 577.0
margin_bottom = 186.0
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="NameOfParty" type="Button" parent="."]
margin_right = 577.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SupportParty" type="Button" parent="."]
margin_top = 38.0
margin_right = 577.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Поддержать партию"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ideology" type="Label" parent="."]
margin_top = 74.0
margin_right = 577.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
text = "Идеология"
align = 1

[node name="Economy" type="Label" parent="."]
margin_top = 102.0
margin_right = 577.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
text = "Экономическая модель"
align = 1

[node name="TradePolicy" type="Label" parent="."]
margin_top = 130.0
margin_right = 577.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 2 )
text = "Торговая политика"
align = 1

[node name="ForeignPolicy" type="Label" parent="."]
margin_top = 158.0
margin_right = 577.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 2 )
text = "Внешняя политика"
align = 1

[connection signal="pressed" from="SupportParty" to="." method="update_supporting_party_by_client"]
